# taskter

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  MIGRATION_GUIDE.md  README.md  agent_executor.py  agent_system.html  app.py  celery_app.py  cli_usage.html  configuration.html  contributing.html  data_files.html  docker-compose.yml  index.html  init_agents.py  installation.html  justfile  llm_providers.py  main.py  manage_migrations.py  mcp.html  models.py  openai_test.txt  overview.html  print.html  providers.html  requirements.txt  scheduling.html  searchindex.js  searchindex.json  tools.py  tui_guide.html
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: deploy.yml  docs.yml  release.yml  test.yml
.taskter/: agents.json  board.json  okrs.json
app/: __init__.py
app/api/: __init__.py  response.py
app/core/: config.py  constants.py  exceptions.py  logging.py
app/models/: __init__.py  agent.py  base.py  execution.py  task.py  user.py
app/repositories/: agent_repository.py  base.py  execution_repository.py  task_repository.py  user_repository.py
app/schemas/: __init__.py  agent_schemas.py  execution_schemas.py  task_schemas.py
app/services/: agent_service.py  execution_service.py  task_service.py  user_service.py
docs/: book.toml
docs/book/: 404.html  agent_system.html  cli_usage.html  configuration.html  contributing.html  data_files.html  index.html  installation.html  print.html  providers.html  scheduling.html  searchindex.js  toc.html  toc.js  tui_guide.html
docs/src/: SUMMARY.md  agent_system.md  cli_usage.md  configuration.md  contributing.md  data_files.md  installation.md  mcp.md  overview.md  providers.md  scheduling.md  tui_guide.md
migrations/versions/: 5a6c245589e6_.py  6d75a4f9b2b3_add_blocked_status_to_task.py  8b82368f9352_initial_database_schema_with_all_models.py  add_task_comments.py  (+2 more)
scripts/: autofix.sh  fix_lints.sh  precommit.sh  setup_agent_roster.sh  setup_example_project.sh  setup_user.py  start_example.sh
src/: agent.rs  cli.rs  config.rs  lib.rs  main.rs  scheduler.rs  status.rs  store.rs  tui.rs
templates/: agents.html  base.html  edit_task.html  executions.html  index.html  login.html
tests/: __init__.py  agent_file_ops.rs  agent_persistence.rs  cli_commands.rs  config_precedence.rs  conftest.py  integration_tests.rs  malformed_response.rs  ollama_provider.rs  openai_provider.rs  scheduler.rs  test_gemini_email_fix.py  tool_functions.rs  tui_app.rs
tools/: add_log.json  add_okr.json  assign_agent.json  create_agent.json  create_task.json  file_manager.json  file_ops.json  get_description.json  list_agents.json  list_tasks.json  manage_file.json  project_files.json  run_bash.json  run_python.json  send_email.json  taskter_agent.json  taskter_okrs.json  taskter_task.json  taskter_tools.json  text_file.json  update_agent.json  web_search.json
(+60 files in other folders)
