[package]
name = "taskter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.28.1"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37.0", features = ["full"] }
[features]
tui = []
[dev-dependencies]
mockito = "1.4.0"
tempfile = "3"
