[package]
name = "taskter"
version = "0.1.0"
edition = "2021"
description = "Taskter is a terminal Kanban board CLI tool built with Rust."
license = "MIT"
repository = "https://github.com/tomatyss/taskter"
documentation = "https://tomatyss.github.io/taskter/"
readme = "README.md"
homepage = "https://github.com/tomatyss/taskter"
keywords = ["cli", "kanban", "tui", "productivity", "task-management"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37.0", features = ["full"] }
lettre = "0.11.17"
chrono = { version = "0.4", features = ["serde"] }
notify = "8.1"
once_cell = "1.19"
tokio-cron-scheduler = "0.14"
chrono-tz = "0.10"
[features]
default = ["tui"]
tui = []
[dev-dependencies]
mockito = "1.4.0"
tempfile = "3"
assert_cmd = "2.0.17"
predicates = "3.1.3"
expectrl = "0.7"
